spell checking is included now, so remove the text that says otherwise

--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_en.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_en.properties
@@ -95,7 +95,7 @@ guiCloseButton=Close
 
 guiConfigWindowTitle = LanguageTool Options
 
-guiDemoText = This is a example input to to show you how LanguageTool works. Note, however, that it does not include a spell checka.
+guiDemoText = This is a example input to to show you how LanguageTool works.
 guiLanguageManagerDialog=Language Module Manager
 
 guiMatchCount = Potential errors:
