--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_en.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_en.properties
@@ -33,6 +33,10 @@ da = Danish
 
 de = German
 
+de-AT = Austrian German
+
+de-CH = Swiss German
+
 desc_comma_whitespace = Use of whitespace before comma and before/after parentheses
 
 desc_double_punct = Use of two consecutive dots or commas
