adding all other country variants for English

--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_en.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_en.properties
@@ -33,9 +33,9 @@ da = Danish
 
 de = German
 
-de-AT = Austrian German
+de-AT = German (Austrian)
 
-de-CH = Swiss German
+de-CH = German (Swiss)
 
 desc_comma_whitespace = Use of whitespace before comma and before/after parentheses
 
@@ -63,9 +63,17 @@ el = Greek
 
 en = English
 
-en-GB = British English
+en-AU = English (Australian)
 
-en-US = American English
+en-GB = English (British)
+
+en-US = English (American)
+
+en-CA = English (Canadian)
+
+en-NZ = English (New Zealand)
+
+en-ZA = English (South African)
 
 enterText = Please type or paste text to check in the top area
 
