add comment about solving the bug

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -97,7 +97,8 @@ LanguageTool Change Log
  -In the profiling rules' mode on the command-line, you can now enable 
   and disable rules.
   
- -Some internal bug fixing in disambiguation and pattern rules.
+ -Some internal bug fixing in disambiguation and pattern rules, including problems 
+  with unification.
  
  
 
