[eo] updated CHANGES.txt for Esperanto.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -40,7 +40,7 @@ LanguageTool Change Log
    -added spelling check dictionary for the standalone version
 
  -Esperanto
-   -fixed false alarms
+   -several new rules and fixed false alarms
    -added <url> for further information about errors with links to
     PMEG (Plena Manlibro de Esperanto) with permission of its
     author Bertilo Wennergren, and to Lernu.net also with
