--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -7,6 +7,8 @@ LanguageTool Change Log
 
  -German:
    -many new rules and rule updates
+   -added spelling check dictionary for the standalone version
+   -added variants for Austria, Germany, and Switzerland
 
  -English:
    -although a matter of debate, "an historic", "an historical", and "an habitual"
@@ -20,24 +22,29 @@ LanguageTool Change Log
    -major update, including many new rules and new tokenization (Jaume Ortolà i Font)
    -new synthesizer (given a part-of-speech, this generates the inflected word
    forms) (Jaume Ortolà i Font)
+   -added spelling check dictionary for the standalone version
 
  -Russian:
    -fixed a few false alarms
    -added URL element for some rules with URL with more information about this rule
-   -added spellcheck dictionary for standalone version. 
+   -added spellcheck dictionary for standalone version.    
 
  -Italian:
    -several new rules (Riccardo Murri and Agnese Dal Borgo)
+   -added spelling check dictionary for the standalone version
 
  -French:
    -updated dictionary to use Dicollecte-4.5
    -several new rules and fixed false alarms
+   -added spelling check dictionary for the standalone version
 
  -Breton
    -several new rules and fixed false alarms
+   -added spelling check dictionary for the standalone version
    
  -Polish
    -added spelling check dictionary for the standalone version
+   -major update of the tagger dictionary
 
  -Esperanto
    -several new rules and fixed false alarms
