--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -45,6 +45,9 @@ LanguageTool Change Log
  -Polish
    -added spelling check dictionary for the standalone version
    -major update of the tagger dictionary
+   
+ -Portuguese
+  -initial support by Marco A.G. Pinto
 
  -Esperanto
    -several new rules and fixed false alarms
