track disambiguator actions

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -71,6 +71,8 @@ LanguageTool Change Log
   simply use "en-US" or "en-GB" as the language code. This implements sf.net feature
   suggestion #3287388.
   
+ -In verbose mode, the log of the rule-based disambiguator actions is displayed.
+  
  -LanguageTool in the standalone version supports now spell-checking via hunspell.
   There are two distribution files: a .zip file for standalone use, 
   and an .oxt extension for LibreOffice/ApacheOpenOffice. All languages supported by 
