update morfologik-stemming to 1.5.3

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -112,6 +112,7 @@ LanguageTool Change Log
  -Some internal bug fixing in disambiguation and pattern rules, including problems 
   with unification.
  
+ -Update of morfologik-stemming library to 1.5.3 (bug-fix release).
  
 
 1.7 (2012-03-25)
