change the colors: spell checker = red background, LanguageTool = blue background

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -77,7 +77,8 @@ LanguageTool Change Log
   There are two distribution files: a .zip file for standalone use, 
   and an .oxt extension for LibreOffice/ApacheOpenOffice. All languages supported by 
   LanguageTool, except for Chinese, have spelling dictionaries bundled with the standalone
-  version.
+  version. Spell-checking errors appear in red in the LanguageTool standalone
+  version, other errors appear in blue.
   
  -If you start the HTTP Server from the GUI, it now reads the configuration files 
   that are configured in the GUI (if the appropriate checkbox is set). 
