--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -114,6 +114,9 @@ LanguageTool Change Log
   with unification.
  
  -Update of morfologik-stemming library to 1.5.3 (bug-fix release).
+
+ -API: Deprecated some methods and the SentenceTokenizer class (SRXSentenceTokenizer should be
+  used instead)
  
 
 1.7 (2012-03-25)
