OOo/LO: fixed false alarm about word being uppercase when the previous sentence ended with a footnote - Sourceforge bug #3534637

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -65,6 +65,9 @@ LanguageTool Change Log
 
  -LibreOffice / OpenOffice integration: SingletonFactory now implements
   XServiceInfo (Stephan Bergmann) - Sourceforge bug #3526635
+
+ -LibreOffice / OpenOffice integration: Fixed false alarm about word being
+  uppercase when the previous sentence ended with a footnote - Sourceforge bug #3534637
   
  -LanguageTool supports now separate rules for different local variants of a language,
   for example American English and British English. To use them from the command line, 
