[de] move words from added.txt to german.dict (now created with Java morfologik only, not the old fsa program) for better startup time (about 0,5 seconds faster on my computer), some words are left in added.txt as examples, tests adapted because order of tags can be different

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -9,6 +9,8 @@ LanguageTool Change Log
    -many new rules and rule updates
    -added spelling check dictionary for the standalone version
    -added variants for Austria, Germany, and Switzerland
+   -added several thousand words to the internal dictionary for better
+    error detection and less false alarms
 
  -English:
    -although a matter of debate, "an historic", "an historical", and "an habitual"
