[en] several rule improvements and new rules (Scott Kuhl)

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -13,6 +13,7 @@ LanguageTool Change Log
     error detection and less false alarms
 
  -English:
+   -several rule improvements and new rules (Scott Kuhl)
    -although a matter of debate, "an historic", "an historical", and "an habitual"
     is not considered incorrect anymore,
     also see http://www.merriam-webster.com/dictionary/a%5B2%5D
