- updated CHANGES.txt with bug fix for incorrect column number.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -127,6 +127,8 @@ LanguageTool Change Log
  -API: Deprecated some methods and the SentenceTokenizer class (SRXSentenceTokenizer should be
   used instead)
 
+ -Bugfix #3054895: fixed incorrect column reported by LanguageTool in command
+  line mode or with --api option when error spanned new line.
 
 1.7 (2012-03-25)
 
