fix a bug when two fast mouse clicks activated the check twice (various Java exceptions thrown due to non-synchronized methods)

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -129,6 +129,9 @@ LanguageTool Change Log
 
  -Bugfix #3054895: fixed incorrect column reported by LanguageTool in command
   line mode or with --api option when error spanned new line.
+  
+ -Bugfix: when LT was hidden in the tray, two very fast mouse clicks could activate the check 
+  twice, and that caused errors. Right now only one checking thread is active.
 
 1.7 (2012-03-25)
 
