fix sf bug #3431788

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -132,6 +132,10 @@ LanguageTool Change Log
   
  -Bugfix: when LT was hidden in the tray, two very fast mouse clicks could activate the check 
   twice, and that caused errors. Right now only one checking thread is active.
+  
+ -Bugfix #3431788: When the message contained the reference to a previous token as the first
+  character, the corrections generated via regular expression replacements on match elements
+  were wrong.
 
 1.7 (2012-03-25)
 
