some work in the language manager - add a warning dialog (including strings to translate) and a TODO; LanguageBuilder supports variants now as well

--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle.properties
@@ -246,3 +246,7 @@ pt = Portuguese
 pt-BR = Portuguese (Brazil)
 
 pt-PT = Portuguese (Portugal) 
+
+guiWarning = Warning
+
+guiDuplicate = Duplicate rule file!
