[ru] new Java rule "repeat word in sentence"

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -31,6 +31,8 @@ LanguageTool Change Log
    -fixed a few false alarms
    -added URL element for some rules with URL with more information about this rule
    -added spellcheck dictionary for standalone version.
+   -several rule improvements 
+   -new Java rule "repeat word in sentence" (disabled by default)
 
  -Italian:
    -several new rules (Riccardo Murri and Agnese Dal Borgo)
