dictionary shrinking: using cfsa2 encoding to make distribution smaller

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -125,6 +125,8 @@ LanguageTool Change Log
   with unification.
 
  -Update of morfologik-stemming library to 1.5.3 (bug-fix release).
+ 
+ -Larger tagger dictionaries were encoded in cfsa2 binary format to save space. 
 
  -API: Deprecated some methods and the SentenceTokenizer class (SRXSentenceTokenizer should be
   used instead)
